# slnoslav

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
assets/puzzles/easy/: 1.kkr
assets/puzzles/hard/: 1.kkr
assets/puzzles/medium/: 3.kkr
data/test/: 10x10s.kkr  4x4.kkr  6x5.kkr  6x6.kkr  7x7.kkr  8x8.kkr
program/: 0.kkr  CMakeLists.txt  main.c
program/inc/: slnoslav.h
program/inc/alg/: backtrack.h  depth_first_search.h  forward_check.h
program/inc/ds/: argument.h  board.h  state.h
program/include/: slnoslav.h  style.h
program/include/algorithms/: arc_consistency.h  backtrack.h  depth_first_search.h  forward_check.h  forward_checking.h  reduce.h
program/include/gui/: default.h  draw.h  graphics.h  input.h  screen.h
program/include/gui/interface/: biggest_rectangle.h  grid.h  interface.h  solver.h
program/include/instance/: argument.h  data.h  expect.h  settings.h  statistics.h
program/include/program/: argument.h  settings.h
program/include/structures/: argument.h  board.h  state.h
program/include/structures/abstract/: queue.h  stack.h
program/include/structures/concrete/: argument.h  board.h  state.h
program/source/: slnoslav.c
program/source/algorithms/: arc_consistency.c  backtrack.c  depth_first_search.c  forward_check.c  forward_checking.c  reduce.c
program/source/gui/: draw.c  graphics.c  input.c
program/source/gui/interface/: biggest_rectangle.c  grid.c  interface.c  solver.c
program/source/instance/: argument.c  expect.c  settings.c  statistics.c
program/source/program/: argument.c  settings.c
program/source/structures/: argument.c  board.c  stack.c  state.c
program/source/structures/concrete/: argument.c  board.c  state.c
program/src/: slnoslav.c
program/src/alg/: backtrack.c  depth_first_search.c  forward_check.c
program/src/ds/: argument.c  board.c  state.c
test/: CMakeLists.txt  main.c
test/blackbox/: CMakeLists.txt  main.c
test/blackbox/suites/: easy_puzzles.c
test/blackbox/suites/easy/: easy_ac.c  easy_ac_bt.c  easy_ac_bt_fch.c  easy_ac_fch.c  easy_arc_consistency.c  easy_arc_consistency_backtrack.c  easy_arc_consistency_backtrack_forward_check.c  easy_arc_consistency_forward_check.c  easy_backtrack.c  easy_backtrack_forward_check.c  easy_bt.c  easy_bt_fch.c  easy_fch.c  easy_forward_check.c  easy_unset.c
test/blackbox/suites/medium/: medium_arc_consistency_backtrack_forward_check.c  medium_backtrack_forward_check.c
test/data/: 11x11s.kkr  6x4s.kkr  6x4u.kkr
test/puzzles/easy/: 2.kkr  3.kkr  4.kkr  5.kkr
test/puzzles/medium/: 1.kkr  2.kkr  4.kkr  5.kkr
test/unit/: CMakeLists.txt  main.c
test/unit/ds/board/: test_board_10x10s.c  test_board_4x4.c  test_board_4x4s.c  test_board_6x4.c  test_board_6x4s.c  test_board_6x4u.c  test_board_istack.c
test/unit/structures/abstract/: stack_test.c
test/unit/structures/board/: test_board_10x10s.c  test_board_4x4s.c  test_board_6x4s.c  test_board_6x4u.c  test_board_istack.c
test/unit/structures/concrete/: state_test.c
test/unit/structures/state/: test_state.c
